--- a/content/About.html
+++ b/content/About.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
