--- a/config/content.htm
+++ b/config/content.htm
@@ -127,6 +127,9 @@
 </div>
 </div>
 <p>將上述程式, 在本頁面導入 Brython 環境後, 可以直接執行, 並且將結果以 Brython browser 的 html 模組列在頁面中</p>
+<h1>W11</h1>
+<p>如何利用可攜程式系統設定 OBS:</p>
+<p>使用 Sharepoint server embed html (需登入)</p>
 <h1>W13</h1>
 <p>在 stud2 主機上以 wsgi 執行動態網站, 以 nginx serve 靜態網站:</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EW6xYokgCRFHg7WXquEfFD4BNa43opTIFiCRN8y1_9QPig?e=AdwXfT">stud2 主機上的動態與靜態網站 serving.mp4</a><span> </span>(在無 IPv6 網路協定支援情況下, 利用 Putty 設定代理)</p>
