--- a/content/W9.html
+++ b/content/W9.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>W9</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W9</h1>
 <p>new bing 建議採取的程式內容為:</p>
 <div>
 <div class="syntaxhighlighter py" id="highlighter_394956">
@@ -268,7 +268,7 @@ img.add_border {
 </div>
 </div>
 <p>將上述程式, 在本頁面導入 Brython 環境後, 可以直接執行, 並且將結果以 Brython browser 的 html 模組列在頁面中</p>
-<br />About << <a href='About.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+<br />About << <a href='About.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
