--- a/content/W13.html
+++ b/content/W13.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W9 << <a href='W9.html'>Previous</a> <br /><h1>W13</h1>
+    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <br /><h1>W13</h1>
 <p>在 stud2 主機上以 wsgi 執行動態網站, 以 nginx serve 靜態網站:</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EW6xYokgCRFHg7WXquEfFD4BNa43opTIFiCRN8y1_9QPig?e=AdwXfT">stud2 主機上的動態與靜態網站 serving.mp4</a><span> </span>(在無 IPv6 網路協定支援情況下, 利用 Putty 設定代理)</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EdtQf3GoNp5PgQz_VOmTtjMBYOSl-ZkYNoP3dSl4glGJkw?e=A2HbwR">以 demo2 為示範帳號, 將 resume-scrum-1 倉儲內容送到 stud2 建立靜態網站.mp4</a></p>
@@ -184,7 +184,7 @@ img.add_border {
 <p>在 Windows 編輯 waitress_server.py, 之後存為 server.py, 再送回 repo 目錄下.</p>
 <p>編輯過程在填入個人帳號所配發的 9 字頭的埠號.</p>
 <p>ssh 遠端登入到 repo 目錄下, 執行 hupper3 -m server.py 測試是否已經以<span> </span><a href="https://stud2.cycu.org/">https://stud2.cycu.org:</a>8字頭的埠號. 若可以連結, 必須馬上更改登入密碼</p>
-<p></p><br />W9 << <a href='W9.html'>Previous</a> </div>
+<p></p><br />W11 << <a href='W11.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
