--- a/content/index.html
+++ b/content/index.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,9 +140,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W9.html'>Next</a> >> W9<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='w2-w8.html'>Next</a> >> w2-w8<br /><h1>About</h1>
 <p>cmsimde_site</p>
-<br /> <a href='W9.html'>Next</a> >> W9</div>
+<br /> <a href='w2-w8.html'>Next</a> >> w2-w8</div>
         
     <!-- footer -->
       <div class="container">
