--- a/content/w2-w8.html
+++ b/content/w2-w8.html
@@ -141,9 +141,33 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w2-w8.html'>Next</a> >> w2-w8<br /><h1>About</h1>
-<p>cmsimde_site</p>
-<br /> <a href='w2-w8.html'>Next</a> >> w2-w8</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>w2-w8</h1>
+<p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EZLrP2sxF3JDqbTbEqQfQBQBCiH7SgznX6a3V03EbvpmVw?e=g4eChp">cdwin_vdi.7z</a><span> </span>(for @nfu users only)</p>
+<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EWHmUoI6S_lGt9l6lr1rAigB7OyGECvBqca2XvF9fxymZw?e=1OC1YL">w6 利用下列第五版可攜程式從倉儲建立網站.mp4</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EegNjb-jkRFNoKJf2dD3MQEBkrJplqtKK9g0er-DktDODg?e=IetGT3">w6 利用 token 進行改版 git push.mp4</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EV5lw40RXvNFue1Cr2sivioBuOj_QA5KzAxDMU0Mkf7z8w?e=NtOJeN">wcm_portable_w2-5.7z</a><span> </span>(下載 220MB 解開後 880MB)</p>
+<p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EXvjttk-fBxOmauSgbw77EgBstfLmwy0w3eunU_osL2hRg?e=fampQ1">miktex_portable.7z</a><span> </span><span>(下載 168MB 解開後 968MB)</span></p>
+<p>納入 Portable MiKTeX 之後的 可攜 Python 程式套件:<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/Ecr0uG0UzJlBtwpYzztBupUBkUdQsQgmd9PWzfjTZBsB8w?e=zlb42j">wcm_portable_w2-4-miktex.7z</a></p>
+<p>電腦輔助機械設計套件 -<span> </span><a href="https://solidedge.siemens.com/en/solutions/users/hobbyists-and-makers/">community 版 Siemens Solid Edge</a> -<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/Ef9XW25wCPtCspWavfXRQkYBKeFkOnZDfMyA3Q-1DRhDNA?e=grfmFo">可攜版下載</a><span> </span>(建議在有還原卡或虛擬主機中使用, for @nfu users only)</p>
+<hr/>
+<p><a href="https://nfuedu.sharepoint.com/:v:/s/wcm2023/EVdigN-bvp9BoLQnMBJHW_QBvYjTxSiiAF4FYvenXUYtUQ?e=Tcj4rN">說明如何建立可攜 Python 第一步.mp4</a><span> </span>(Python, SciTE, pip)</p>
+<p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EaCCYSDwemdEgl_YUiwNglEByPmHyHFW9CboFFS7ao1hLw?e=seZeSo">wcm_portable_w2-1.7z</a></p>
+<p>為了執行 cmsimde, 需要安裝以下模組:</p>
+<p>pip install flask flask_cors bs4 lxml pelican markdown leo pyopenssl</p>
+<p>為了使用 git, 必須下載 portablegit:</p>
+<p><a href="https://git-scm.com/download/win">https://git-scm.com/download/win</a>  (取得 portable)</p>
+<p><a href="https://git-scm.com/book/zh-tw/v2">https://git-scm.com/book/zh-tw/v2</a> (中文版 git book)</p>
+<p>Windows 命令列中的常用指令:</p>
+<p>cd - change directory</p>
+<p>dir - show directory content</p>
+<p>y:\&gt; 代表目前位於 Y 槽根目錄, 以 &gt; 作為 prompt (回應), 等待使用者輸入指令</p>
+<p><span>y:\&gt;c: 表示要從 Y 切換到 C</span></p>
+<p><span>cd \ 因為 "\" 代表根目錄.</span></p>
+<hr/>
+<p><a href="https://nfuedu.sharepoint.com/:v:/s/wcm2023/EZNog084xGJEuyfPk_zQchEBzyGhwXRAs5cuWsAScLMDFQ?e=85DhLj">說明如何利用 pip 安裝 cmimse 所需模組.mp4</a>, 並下載<span> </span><a href="https://git-scm.com/download/win">portablegit</a><span> </span>以及指定<span> </span><a href="https://github.com/mdewcm2023">site</a><span> </span>作業 (取得作業連結請參考 Team 中的連結)</p>
+<p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EXQljJw1yE9At9MDkIklVFAB9Ef3q59sTJnbRiVWOSSGdw?e=AtNFlJ">wcm_portable_w2-2.7z</a></p>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</div>
         
     <!-- footer -->
       <div class="container">
