--- a/content/w2-w8.html
+++ b/content/w2-w8.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>w2-w8</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2-w8</h1>
 <p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EZLrP2sxF3JDqbTbEqQfQBQBCiH7SgznX6a3V03EbvpmVw?e=g4eChp">cdwin_vdi.7z</a><span> </span>(for @nfu users only)</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EWHmUoI6S_lGt9l6lr1rAigB7OyGECvBqca2XvF9fxymZw?e=1OC1YL">w6 利用下列第五版可攜程式從倉儲建立網站.mp4</a></p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EegNjb-jkRFNoKJf2dD3MQEBkrJplqtKK9g0er-DktDODg?e=IetGT3">w6 利用 token 進行改版 git push.mp4</a></p>
@@ -166,8 +166,7 @@ img.add_border {
 <hr/>
 <p><a href="https://nfuedu.sharepoint.com/:v:/s/wcm2023/EZNog084xGJEuyfPk_zQchEBzyGhwXRAs5cuWsAScLMDFQ?e=85DhLj">說明如何利用 pip 安裝 cmimse 所需模組.mp4</a>, 並下載<span> </span><a href="https://git-scm.com/download/win">portablegit</a><span> </span>以及指定<span> </span><a href="https://github.com/mdewcm2023">site</a><span> </span>作業 (取得作業連結請參考 Team 中的連結)</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EXQljJw1yE9At9MDkIklVFAB9Ef3q59sTJnbRiVWOSSGdw?e=AtNFlJ">wcm_portable_w2-2.7z</a></p>
-<p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</div>
+<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
