--- a/content/w3.html
+++ b/content/w3.html
@@ -141,50 +141,32 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <br /><h1>W13</h1>
-<p>在 stud2 主機上以 wsgi 執行動態網站, 以 nginx serve 靜態網站:</p>
-<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EW6xYokgCRFHg7WXquEfFD4BNa43opTIFiCRN8y1_9QPig?e=AdwXfT">stud2 主機上的動態與靜態網站 serving.mp4</a><span> </span>(在無 IPv6 網路協定支援情況下, 利用 Putty 設定代理)</p>
-<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EdtQf3GoNp5PgQz_VOmTtjMBYOSl-ZkYNoP3dSl4glGJkw?e=A2HbwR">以 demo2 為示範帳號, 將 resume-scrum-1 倉儲內容送到 stud2 建立靜態網站.mp4</a></p>
-<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/ESE0w-u5tHpHoNLQSZgxacwBbJpcBoNd4l_i6oHNSl4jZQ?e=kYcUL6">使用 vi 編輯 server.py 放入各自的 9 字頭埠號後, 就可以用 hupper3 -m server.py 測試.mp4</a></p>
-<p>下載<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/ES2vox9RoINKjZwpBDMaLTcBp2iDSJ5kcnyOe7wTcX66JQ?e=i5OKhf">putty 0.78.7z</a></p>
-<p>在 stud2 主機建立倉儲的動態系統:</p>
-<p>ssh<span> </span><a href="mailto:demo2@stud2.cycu.org">demo2@stud2.cycu.org</a> 登入後, 以 ssh-keygen 在 .ssh 目錄下建立 id_rsa,<span> </span><span>id_rsa.pub</span></p>
-<p>.ssh/config:</p>
-<div>
-<div class="syntaxhighlighter js" id="highlighter_53597">
-<table border="0" cellpadding="0" cellspacing="0">
-<tbody>
-<tr>
-<td class="gutter">
-<div class="line number1 index0 alt2">1</div>
-<div class="line number2 index1 alt1">2</div>
-<div class="line number3 index2 alt2">3</div>
-<div class="line number4 index3 alt1">4</div>
-</td>
-<td class="code">
-<div class="container">
-<div class="line number1 index0 alt2"><code class="js plain">Host github.com</code></div>
-<div class="line number2 index1 alt1"><code class="js plain">User git</code></div>
-<div class="line number3 index2 alt2"><code class="js plain">Hostname github.com</code></div>
-<div class="line number4 index3 alt1"><code class="js plain">ProxyCommand /usr/bin/ncat --proxy p4.cycu.org:3128 --proxy-type http %h %p</code></div>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-<p>sftp<span> </span><a href="mailto:demo2@stud2.cycu.org">demo2@stud2.cycu.org</a> 登入後, cd .ssh 然後以 put<span> </span><span>config</span><span> </span>將代理主機的設定檔案送到 stud2 帳號下的 .ssh 目錄, 使用 get id_rsa.pub 將公鑰取下, 然後以 SciTE 編輯器打開後, 將公鑰內容送到 Github 帳號下的 settings 中的 SSH and GPG 設定區.</p>
-<p>完成上述設定後, 以 SSH 協定取下倉儲:</p>
-<p>ssh 登入帳號後, 在所在目錄 /home/帳號/, 以 git clone<span> </span><a href="mailto:git@github.com:wcm2023">git@github.com:wcm2023</a>/倉儲名稱.git repo</p>
-<p>cd repo</p>
-<p>利用以下指令, 將 acp 設為 user 可以執行 (Execute):</p>
-<p>chmod u+x acp</p>
-<p>以 sftp get 取下 repo 目錄下的 waitress_server.py</p>
-<p>在 Windows 編輯 waitress_server.py, 之後存為 server.py, 再送回 repo 目錄下.</p>
-<p>編輯過程在填入個人帳號所配發的 9 字頭的埠號.</p>
-<p>ssh 遠端登入到 repo 目錄下, 執行 hupper3 -m server.py 測試是否已經以<span> </span><a href="https://stud2.cycu.org/">https://stud2.cycu.org:</a>8字頭的埠號. 若可以連結, 必須馬上更改登入密碼</p>
-<p></p><br />W11 << <a href='W11.html'>Previous</a> </div>
+    <div id="tipue_search_content">w2-w8 << <a href='w2-w8.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>w3</h1>
+<p>Windows 利用 Ctrl + Shift + Esc 帶出工作管理員中的效能, 可以檢視電腦硬體與網路的運作狀況.</p>
+<p>檢查電腦 services, 開始 -&gt; 滑鼠右鍵帶出電腦管理 -&gt; 服務與應用程式 可以查看電腦目前所設定或啟動的 services</p>
+<p>從上述第二版可攜 Python 轉進第三版:</p>
+<p>進行下列修改:</p>
+<ol>
+<li>建立 home_ipv6 目錄下的 DeskTop 目錄 (與 AppData 接受程式執行時的暫存檔案)</li>
+<li>編輯 python.properties 將 line 153 改為: python.command=pythonw</li>
+<li>編輯 SciTEGlobal.properties 將 line 162 改為: load.on.activate=1 (若編輯中的檔案在其他應用程式修 改後, 可直接在 SciTE 中自動 load.</li>
+<li>編輯 SciTEGlobal.properties 將 line 204 改為: tabsize=4</li>
+<li>編輯 SciTEGlobal.properties 將 line 205 改為: indent.size=4</li>
+<li>編輯 SciTEGlobal.properties 將 line 335 # 拿掉 (code.page=65001, 表示編輯區使用 UTF-8 編碼)</li>
+<li>編輯 SciTEGlobal.properties 將 line 336 以 # 蓋掉 (code.page=0, 表示要用系統的中文編碼, 也就是 big-5)</li>
+</ol>
+<p>修改之後的可攜 Python:<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/ESbmgwyK-5xGj9A18njOsXoBOmk8gsB0317yaUD3jnK2wQ?e=oOsAnr">wcm_portable_w2-3.7z</a></p>
+<hr/>
+<p>學號@gm.nfu.edu.tw 為 Gmail 系統, 目前學校已經將此電子郵箱落日, 新生已經不再發送此 @gm 的郵箱.</p>
+<p>學號@nfu.edu.tw 為 Mail 2000 系統,  可以從<span> </span><a href="https://mail.nfu.edu.tw/">https://mail.nfu.edu.tw</a><span> </span>以個人學號及自行設定的密碼登入.</p>
+<p>上述兩種教育版的電子信箱 (都有 nfu.edu.tw 符號名稱), 都可以從<span> </span><a href="https://www.microsoft.com/zh-tw/education/products/office">https://www.microsoft.com/zh-tw/education/products/office</a><span> </span>登記 onedrive 帳號, 個取得 5T 雲端容量.</p>
+<p>但 wcm2023 Teams 只支援 @nfu 帳號登入, 且登入後, 可以透過 MS Teams: sblk6ao (for @nfu users only) 進入網際內容管理團隊上課.</p>
+<hr/>
+<p>有關學員學號與 github 帳號的對應資料存入<span> </span><a href="https://github.com/mdecycu/studlist">https://github.com/mdecycu/studlist</a>, 網頁位於:<span> </span><a href="https://mde.tw/studlist/2023spring/1a.txt">https://mde.tw/studlist/2023spring/1a.txt</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/Ef5iQXdMRuBKgLDfRVO_SZUB5fFBsycGgl8hNX9yZf5pAQ?e=FaAGir">四技第四週進度提醒.mp4</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EYbip3FksIpJihrIQqTVNB4BhvQZKoL3Fxu4RiRTECWdQQ?e=AEaVel">四技第四週第二部影片 - cmsimde 網站建立.mp4</a></p>
+<p></p>
+<br />w2-w8 << <a href='w2-w8.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</div>
         
     <!-- footer -->
       <div class="container">
