--- a/content/w3.html
+++ b/content/w3.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2-w8 << <a href='w2-w8.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>w3</h1>
+    <div id="tipue_search_content">w2-w8 << <a href='w2-w8.html'>Previous</a> <a href='w5.html'>Next</a> >> w5<br /><h1>w3</h1>
 <p>Windows 利用 Ctrl + Shift + Esc 帶出工作管理員中的效能, 可以檢視電腦硬體與網路的運作狀況.</p>
 <p>檢查電腦 services, 開始 -&gt; 滑鼠右鍵帶出電腦管理 -&gt; 服務與應用程式 可以查看電腦目前所設定或啟動的 services</p>
 <p>從上述第二版可攜 Python 轉進第三版:</p>
@@ -165,8 +165,7 @@ img.add_border {
 <p>有關學員學號與 github 帳號的對應資料存入<span> </span><a href="https://github.com/mdecycu/studlist">https://github.com/mdecycu/studlist</a>, 網頁位於:<span> </span><a href="https://mde.tw/studlist/2023spring/1a.txt">https://mde.tw/studlist/2023spring/1a.txt</a></p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/Ef5iQXdMRuBKgLDfRVO_SZUB5fFBsycGgl8hNX9yZf5pAQ?e=FaAGir">四技第四週進度提醒.mp4</a></p>
 <p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EYbip3FksIpJihrIQqTVNB4BhvQZKoL3Fxu4RiRTECWdQQ?e=AEaVel">四技第四週第二部影片 - cmsimde 網站建立.mp4</a></p>
-<p></p>
-<br />w2-w8 << <a href='w2-w8.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</div>
+<br />w2-w8 << <a href='w2-w8.html'>Previous</a> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
