--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -25,6 +25,30 @@
 <hr/>
 <p><a href="https://nfuedu.sharepoint.com/:v:/s/wcm2023/EZNog084xGJEuyfPk_zQchEBzyGhwXRAs5cuWsAScLMDFQ?e=85DhLj">說明如何利用 pip 安裝 cmimse 所需模組.mp4</a>, 並下載<span> </span><a href="https://git-scm.com/download/win">portablegit</a><span> </span>以及指定<span> </span><a href="https://github.com/mdewcm2023">site</a><span> </span>作業 (取得作業連結請參考 Team 中的連結)</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EXQljJw1yE9At9MDkIklVFAB9Ef3q59sTJnbRiVWOSSGdw?e=AtNFlJ">wcm_portable_w2-2.7z</a></p>
+<h1>w3</h1>
+<p>Windows 利用 Ctrl + Shift + Esc 帶出工作管理員中的效能, 可以檢視電腦硬體與網路的運作狀況.</p>
+<p>檢查電腦 services, 開始 -&gt; 滑鼠右鍵帶出電腦管理 -&gt; 服務與應用程式 可以查看電腦目前所設定或啟動的 services</p>
+<p>從上述第二版可攜 Python 轉進第三版:</p>
+<p>進行下列修改:</p>
+<ol>
+<li>建立 home_ipv6 目錄下的 DeskTop 目錄 (與 AppData 接受程式執行時的暫存檔案)</li>
+<li>編輯 python.properties 將 line 153 改為: python.command=pythonw</li>
+<li>編輯 SciTEGlobal.properties 將 line 162 改為: load.on.activate=1 (若編輯中的檔案在其他應用程式修 改後, 可直接在 SciTE 中自動 load.</li>
+<li>編輯 SciTEGlobal.properties 將 line 204 改為: tabsize=4</li>
+<li>編輯 SciTEGlobal.properties 將 line 205 改為: indent.size=4</li>
+<li>編輯 SciTEGlobal.properties 將 line 335 # 拿掉 (code.page=65001, 表示編輯區使用 UTF-8 編碼)</li>
+<li>編輯 SciTEGlobal.properties 將 line 336 以 # 蓋掉 (code.page=0, 表示要用系統的中文編碼, 也就是 big-5)</li>
+</ol>
+<p>修改之後的可攜 Python:<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/ESbmgwyK-5xGj9A18njOsXoBOmk8gsB0317yaUD3jnK2wQ?e=oOsAnr">wcm_portable_w2-3.7z</a></p>
+<hr/>
+<p>學號@gm.nfu.edu.tw 為 Gmail 系統, 目前學校已經將此電子郵箱落日, 新生已經不再發送此 @gm 的郵箱.</p>
+<p>學號@nfu.edu.tw 為 Mail 2000 系統,  可以從<span> </span><a href="https://mail.nfu.edu.tw/">https://mail.nfu.edu.tw</a><span> </span>以個人學號及自行設定的密碼登入.</p>
+<p>上述兩種教育版的電子信箱 (都有 nfu.edu.tw 符號名稱), 都可以從<span> </span><a href="https://www.microsoft.com/zh-tw/education/products/office">https://www.microsoft.com/zh-tw/education/products/office</a><span> </span>登記 onedrive 帳號, 個取得 5T 雲端容量.</p>
+<p>但 wcm2023 Teams 只支援 @nfu 帳號登入, 且登入後, 可以透過 MS Teams: sblk6ao (for @nfu users only) 進入網際內容管理團隊上課.</p>
+<hr/>
+<p>有關學員學號與 github 帳號的對應資料存入<span> </span><a href="https://github.com/mdecycu/studlist">https://github.com/mdecycu/studlist</a>, 網頁位於:<span> </span><a href="https://mde.tw/studlist/2023spring/1a.txt">https://mde.tw/studlist/2023spring/1a.txt</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/Ef5iQXdMRuBKgLDfRVO_SZUB5fFBsycGgl8hNX9yZf5pAQ?e=FaAGir">四技第四週進度提醒.mp4</a></p>
+<p><a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/EYbip3FksIpJihrIQqTVNB4BhvQZKoL3Fxu4RiRTECWdQQ?e=AEaVel">四技第四週第二部影片 - cmsimde 網站建立.mp4</a></p>
 <p></p>
 <h1>W9</h1>
 <p>new bing 建議採取的程式內容為:</p>
