--- a/content/W9.html
+++ b/content/W9.html
@@ -142,132 +142,138 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w5 << <a href='w5.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W9</h1>
-<p>new bing 建議採取的程式內容為:</p>
-<div>
-<div class="syntaxhighlighter py" id="highlighter_394956">
-<table border="0" cellpadding="0" cellspacing="0">
-<tbody>
-<tr>
-<td class="gutter">
-<div class="line number1 index0 alt2">1</div>
-<div class="line number2 index1 alt1">2</div>
-<div class="line number3 index2 alt2">3</div>
-<div class="line number4 index3 alt1">4</div>
-<div class="line number5 index4 alt2">5</div>
-<div class="line number6 index5 alt1">6</div>
-<div class="line number7 index6 alt2">7</div>
-<div class="line number8 index7 alt1">8</div>
-<div class="line number9 index8 alt2">9</div>
-<div class="line number10 index9 alt1">10</div>
-<div class="line number11 index10 alt2">11</div>
-<div class="line number12 index11 alt1">12</div>
-<div class="line number13 index12 alt2">13</div>
-<div class="line number14 index13 alt1">14</div>
-<div class="line number15 index14 alt2">15</div>
-<div class="line number16 index15 alt1">16</div>
-<div class="line number17 index16 alt2">17</div>
-<div class="line number18 index17 alt1">18</div>
-<div class="line number19 index18 alt2">19</div>
-<div class="line number20 index19 alt1">20</div>
-<div class="line number21 index20 alt2">21</div>
-<div class="line number22 index21 alt1">22</div>
-<div class="line number23 index22 alt2">23</div>
-<div class="line number24 index23 alt1">24</div>
-<div class="line number25 index24 alt2">25</div>
-<div class="line number26 index25 alt1">26</div>
-<div class="line number27 index26 alt2">27</div>
-<div class="line number28 index27 alt1">28</div>
-<div class="line number29 index28 alt2">29</div>
-<div class="line number30 index29 alt1">30</div>
-<div class="line number31 index30 alt2">31</div>
-<div class="line number32 index31 alt1">32</div>
-<div class="line number33 index32 alt2">33</div>
-<div class="line number34 index33 alt1">34</div>
-<div class="line number35 index34 alt2">35</div>
-<div class="line number36 index35 alt1">36</div>
-<div class="line number37 index36 alt2">37</div>
-<div class="line number38 index37 alt1">38</div>
-<div class="line number39 index38 alt2">39</div>
-<div class="line number40 index39 alt1">40</div>
-<div class="line number41 index40 alt2">41</div>
-<div class="line number42 index41 alt1">42</div>
-<div class="line number43 index42 alt2">43</div>
-<div class="line number44 index43 alt1">44</div>
-<div class="line number45 index44 alt2">45</div>
-<div class="line number46 index45 alt1">46</div>
-<div class="line number47 index46 alt2">47</div>
-<div class="line number48 index47 alt1">48</div>
-<div class="line number49 index48 alt2">49</div>
-<div class="line number50 index49 alt1">50</div>
-<div class="line number51 index50 alt2">51</div>
-<div class="line number52 index51 alt1">52</div>
-<div class="line number53 index52 alt2">53</div>
-<div class="line number54 index53 alt1">54</div>
-</td>
-<td class="code">
-<div class="container">
-<div class="line number1 index0 alt2"><code class="py keyword">from</code> <code class="py plain">browser </code><code class="py keyword">import</code> <code class="py plain">html, document</code></div>
-<div class="line number2 index1 alt1"><code class="py plain">brython_div </code><code class="py keyword">=</code> <code class="py plain">document[</code><code class="py string">"brython_div"</code><code class="py plain">]</code></div>
-<div class="line number3 index2 alt2"><code class="py comments"># Example data for five tests</code></div>
-<div class="line number4 index3 alt1"><code class="py plain">url1 </code><code class="py keyword">=</code> <code class="py string">"https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw5.txt"</code></div>
-<div class="line number5 index4 alt2"><code class="py plain">url2 </code><code class="py keyword">=</code> <code class="py string">"https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw6.txt"</code></div>
-<div class="line number6 index5 alt1"><code class="py plain">url3 </code><code class="py keyword">=</code> <code class="py string">"https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw6-2.txt"</code></div>
-<div class="line number7 index6 alt2"><code class="py plain">url4 </code><code class="py keyword">=</code> <code class="py string">"https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/075c06b2baf1bb07665f1a98e9f88f7e81ebe1a4/1aw8.txt"</code></div>
-<div class="line number8 index7 alt1"><code class="py plain">url5 </code><code class="py keyword">=</code> <code class="py string">"https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw9.txt"</code></div>
-<div class="line number9 index8 alt2"> </div>
-<div class="line number10 index9 alt1"><code class="py comments">'''</code></div>
-<div class="line number11 index10 alt2"><code class="py comments">test1 = ["12345:80", "67890:70"]</code></div>
-<div class="line number12 index11 alt1"><code class="py comments">test2 = ["12345:85", "67890:75"]</code></div>
-<div class="line number13 index12 alt2"><code class="py comments">test3 = ["12345:90", "67890:80"]</code></div>
-<div class="line number14 index13 alt1"><code class="py comments">test4 = ["12345:95", "67890:85"]</code></div>
-<div class="line number15 index14 alt2"><code class="py comments">test5 = ["12345:100", "67890:90"]</code></div>
-<div class="line number16 index15 alt1"><code class="py comments">'''</code></div>
-<div class="line number17 index16 alt2"><code class="py plain">test1 </code><code class="py keyword">=</code> <code class="py functions">open</code><code class="py plain">(url1).read().split(</code><code class="py string">"\n"</code><code class="py plain">)[</code><code class="py value">1</code><code class="py plain">:]</code></div>
-<div class="line number18 index17 alt1"><code class="py plain">test2 </code><code class="py keyword">=</code> <code class="py functions">open</code><code class="py plain">(url2).read().split(</code><code class="py string">"\n"</code><code class="py plain">)[</code><code class="py value">1</code><code class="py plain">:]</code></div>
-<div class="line number19 index18 alt2"><code class="py plain">test3 </code><code class="py keyword">=</code> <code class="py functions">open</code><code class="py plain">(url3).read().split(</code><code class="py string">"\n"</code><code class="py plain">)[</code><code class="py value">1</code><code class="py plain">:]</code></div>
-<div class="line number20 index19 alt1"><code class="py plain">test4 </code><code class="py keyword">=</code> <code class="py functions">open</code><code class="py plain">(url4).read().split(</code><code class="py string">"\n"</code><code class="py plain">)[</code><code class="py value">1</code><code class="py plain">:]</code></div>
-<div class="line number21 index20 alt2"><code class="py plain">test5 </code><code class="py keyword">=</code> <code class="py functions">open</code><code class="py plain">(url5).read().split(</code><code class="py string">"\n"</code><code class="py plain">)[</code><code class="py value">1</code><code class="py plain">:]</code></div>
-<div class="line number22 index21 alt1"> </div>
-<div class="line number23 index22 alt2"> </div>
-<div class="line number24 index23 alt1"><code class="py comments"># Create a dictionary to store the student numbers and their test scores</code></div>
-<div class="line number25 index24 alt2"><code class="py plain">student_scores </code><code class="py keyword">=</code> <code class="py plain">{}</code></div>
-<div class="line number26 index25 alt1"><code class="py spaces"> </code> </div>
-<div class="line number27 index26 alt2"><code class="py comments"># Iterate over the data for each test</code></div>
-<div class="line number28 index27 alt1"><code class="py keyword">for</code> <code class="py plain">test_data </code><code class="py keyword">in</code> <code class="py plain">[test1, test2, test3, test4, test5]:</code></div>
-<div class="line number29 index28 alt2"><code class="py spaces">    </code><code class="py comments"># Iterate over the data for this test</code></div>
-<div class="line number30 index29 alt1"><code class="py spaces">    </code><code class="py keyword">for</code> <code class="py plain">item </code><code class="py keyword">in</code> <code class="py plain">test_data:</code></div>
-<div class="line number31 index30 alt2"><code class="py spaces">        </code><code class="py comments"># Split the item into its components</code></div>
-<div class="line number32 index31 alt1"><code class="py spaces">        </code><code class="py plain">student_number, score </code><code class="py keyword">=</code> <code class="py plain">item.split(</code><code class="py string">":"</code><code class="py plain">)</code></div>
-<div class="line number33 index32 alt2"><code class="py spaces">         </code> </div>
-<div class="line number34 index33 alt1"><code class="py spaces">        </code><code class="py comments"># Convert the score to an integer</code></div>
-<div class="line number35 index34 alt2"><code class="py spaces">        </code><code class="py keyword">try</code><code class="py plain">:</code></div>
-<div class="line number36 index35 alt1"><code class="py spaces">            </code><code class="py plain">score </code><code class="py keyword">=</code> <code class="py functions">int</code><code class="py plain">(score)</code></div>
-<div class="line number37 index36 alt2"><code class="py spaces">        </code><code class="py keyword">except</code><code class="py plain">:</code></div>
-<div class="line number38 index37 alt1"><code class="py spaces">            </code><code class="py plain">score </code><code class="py keyword">=</code> <code class="py value">0</code></div>
-<div class="line number39 index38 alt2"><code class="py spaces">         </code> </div>
-<div class="line number40 index39 alt1"><code class="py spaces">        </code><code class="py comments"># Add the score to the list of scores for this student</code></div>
-<div class="line number41 index40 alt2"><code class="py spaces">        </code><code class="py keyword">if</code> <code class="py plain">student_number </code><code class="py keyword">not</code> <code class="py keyword">in</code> <code class="py plain">student_scores:</code></div>
-<div class="line number42 index41 alt1"><code class="py spaces">            </code><code class="py plain">student_scores[student_number] </code><code class="py keyword">=</code> <code class="py plain">[]</code></div>
-<div class="line number43 index42 alt2"><code class="py spaces">        </code><code class="py plain">student_scores[student_number].append(score)</code></div>
-<div class="line number44 index43 alt1"><code class="py spaces"> </code> </div>
-<div class="line number45 index44 alt2"><code class="py comments"># Calculate the average score for each student</code></div>
-<div class="line number46 index45 alt1"><code class="py keyword">for</code> <code class="py plain">student_number, scores </code><code class="py keyword">in</code> <code class="py plain">student_scores.items():</code></div>
-<div class="line number47 index46 alt2"><code class="py spaces">    </code><code class="py plain">average_score </code><code class="py keyword">=</code> <code class="py functions">int</code><code class="py plain">(</code><code class="py functions">sum</code><code class="py plain">(scores) </code><code class="py keyword">/</code> <code class="py functions">len</code><code class="py plain">(scores))</code></div>
-<div class="line number48 index47 alt1"><code class="py spaces">    </code><code class="py comments">#print(f"Student {student_number} has an average score of {average_score}")</code></div>
-<div class="line number49 index48 alt2"><code class="py spaces">    </code><code class="py plain">brython_div &lt;</code><code class="py keyword">=</code> <code class="py plain">student_number</code></div>
-<div class="line number50 index49 alt1"><code class="py spaces">    </code><code class="py plain">brython_div &lt;</code><code class="py keyword">=</code> <code class="py string">":"</code></div>
-<div class="line number51 index50 alt2"><code class="py spaces">    </code><code class="py plain">brython_div &lt;</code><code class="py keyword">=</code> <code class="py plain">average_score</code></div>
-<div class="line number52 index51 alt1"><code class="py spaces">    </code><code class="py plain">brython_div &lt;</code><code class="py keyword">=</code> <code class="py plain">html.BR()</code></div>
-<div class="line number53 index52 alt2"> </div>
-<div class="line number54 index53 alt1"><code class="py plain">brython_div &lt;</code><code class="py keyword">=</code> <code class="py plain">data</code></div>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-<p>將上述程式, 在本頁面導入 Brython 環境後, 可以直接執行, 並且將結果以 Brython browser 的 html 模組列在頁面中</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">&lt;h1&gt;w9平均成績&lt;/h1&gt;
+&lt;p&gt;&lt;span&gt;這是各個學員的平均成績程式:&lt;/span&gt;&lt;/p&gt;
+&lt;p&gt;
+&lt;script type="text/javascript" src="https://unpkg.com/three@0.144.0/build/three.js"&gt;&lt;/script&gt;
+&lt;/p&gt;
+&lt;!-- &lt;script&gt;
+  MathJax = {
+    tex: {inlineMath: [['$', '$'], ['\(', '\)']]}
+  };
+  &lt;/script&gt;
+  &lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"&gt;&lt;/script&gt;--&gt;
+&lt;p&gt;&lt;/p&gt;
+&lt;pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"&gt;# Example data for five tests
+url1 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw5.txt"
+url2 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw6.txt"
+url3 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw6-2.txt"
+url4 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/075c06b2baf1bb07665f1a98e9f88f7e81ebe1a4/1aw8.txt"
+url5 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw9.txt"
+
+'''
+test1 = ["12345:80", "67890:70"]
+test2 = ["12345:85", "67890:75"]
+test3 = ["12345:90", "67890:80"]
+test4 = ["12345:95", "67890:85"]
+test5 = ["12345:100", "67890:90"]
+'''
+test1 = open(url1).read().split("\n")[1:]
+test2 = open(url2).read().split("\n")[1:]
+test3 = open(url3).read().split("\n")[1:]
+test4 = open(url4).read().split("\n")[1:]
+test5 = open(url5).read().split("\n")[1:]
+
+
+# Create a dictionary to store the student numbers and their test scores
+student_scores = {}
+
+# Iterate over the data for each test
+for test_data in [test1, test2, test3, test4, test5]:
+    # Iterate over the data for this test
+    for item in test_data:
+        # Split the item into its components
+        student_number, score = item.split(":")
+
+        # Convert the score to an integer
+        try:
+            score = int(score)
+        except:
+            score = 0
+
+        # Add the score to the list of scores for this student
+        if student_number not in student_scores:
+            student_scores[student_number] = []
+        student_scores[student_number].append(score)
+
+# Calculate the average score for each student
+for student_number, scores in student_scores.items():
+    average_score = int(sum(scores) / len(scores))
+    print(f"{student_number}的期中平均成績 {average_score}")&lt;/pre&gt;
+&lt;p&gt;&lt;br&gt;&lt;br&gt;&lt;/p&gt;
+&lt;!-- 導入 brython 程式庫 --&gt;
+&lt;p&gt;
+&lt;script src="./../cmsimde/static/brython.js"&gt;&lt;/script&gt;
+&lt;script src="./../cmsimde/static/brython_stdlib.js"&gt;&lt;/script&gt;
+&lt;/p&gt;
+&lt;!-- 啟動 Brython --&gt;
+&lt;p&gt;
+&lt;script&gt;// &lt;![CDATA[
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+// ]]&gt;&lt;/script&gt;
+&lt;/p&gt;
+&lt;div id="brython_div"&gt;&lt;/div&gt;
+&lt;p&gt;
+&lt;script type="text/python"&gt;// &lt;![CDATA[
+from browser import html, document
+brython_div = document["brython_div"]
+# Example data for five tests
+url1 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw5.txt"
+url2 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw6.txt"
+url3 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw6-2.txt"
+url4 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/075c06b2baf1bb07665f1a98e9f88f7e81ebe1a4/1aw8.txt"
+url5 = "https://gist.githubusercontent.com/mdecycu/07f0f0817115a68d55d6ca603c5ab393/raw/239f4eb84715978daead6ac1f231af7f190a2a5e/1aw9.txt"
+ 
+'''
+test1 = ["12345:80", "67890:70"]
+test2 = ["12345:85", "67890:75"]
+test3 = ["12345:90", "67890:80"]
+test4 = ["12345:95", "67890:85"]
+test5 = ["12345:100", "67890:90"]
+'''
+test1 = open(url1).read().split("\n")[1:]
+test2 = open(url2).read().split("\n")[1:]
+test3 = open(url3).read().split("\n")[1:]
+test4 = open(url4).read().split("\n")[1:]
+test5 = open(url5).read().split("\n")[1:]
+ 
+ 
+# Create a dictionary to store the student numbers and their test scores
+student_scores = {}
+ 
+# Iterate over the data for each test
+for test_data in [test1, test2, test3, test4, test5]:
+    # Iterate over the data for this test
+    for item in test_data:
+        # Split the item into its components
+        student_number, score = item.split(":")
+ 
+        # Convert the score to an integer
+        try:
+            score = int(score)
+        except:
+            score = 0
+ 
+        # Add the score to the list of scores for this student
+        if student_number not in student_scores:
+            student_scores[student_number] = []
+        student_scores[student_number].append(score)
+ 
+# Calculate the average score for each student
+for student_number, scores in student_scores.items():
+    average_score = int(sum(scores) / len(scores))
+    print(f"{student_number}的期中平均成績 {average_score}")
+    brython_div &lt;= student_number
+    brython_div &lt;= ":"
+    brython_div &lt;= average_score
+    brython_div &lt;= html.BR()
+
+brython_div &lt;= data
+// ]]&gt;&lt;/script&gt;
+&lt;/p&gt;</pre>
+<p></p>
 <br />w5 << <a href='w5.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
