--- a/config/content.htm
+++ b/config/content.htm
@@ -248,4 +248,55 @@ brython_div &lt;= data
 <p>在 Windows 編輯 waitress_server.py, 之後存為 server.py, 再送回 repo 目錄下.</p>
 <p>編輯過程在填入個人帳號所配發的 9 字頭的埠號.</p>
 <p>ssh 遠端登入到 repo 目錄下, 執行 hupper3 -m server.py 測試是否已經以<span> </span><a href="https://stud2.cycu.org/">https://stud2.cycu.org:</a>8字頭的埠號. 若可以連結, 必須馬上更改登入密碼</p>
-<p></p>
+<h1>W15</h1>
+<p>希望採全雲端的方式建立 github pages 網站</p>
+<ol>
+<li>近端 (可攜 localhost, add commit 無需上網), 中端 (stud2 主機上, 與 Github 互動, 仍受到上傳檔案容量限制 (free account)) &gt; 雲端啟用動態網站編輯網頁內容 (受限於 Replit 所提供的服務, cpu, ram, disk)</li>
+<li>登入 gmail 帳號 -&gt;<span> </span><a href="https://replit.com/">https://replit.com</a></li>
+<li>在 Replit 中建立 Repl -&gt; 選用 Python template -&gt; 將專案命名為 w15</li>
+<li>在 Shell 頁面輸入 git version</li>
+<li>git init</li>
+<li>git branch -m main</li>
+<li>git submodule add https://github.com/mdecycu/cmsimde.git cmsimde</li>
+<li>利用下列指令, 將 cmsimde 目錄中的 up_dir 內全部資料複製到專案根目錄</li>
+<li>確認目前位於根目錄</li>
+<li>cp -R ./cmsimde/up_dir/* ./</li>
+<li>建立 .gitignore  將 venv, config/config, __pycache__ 等靜態網站無關的檔案讓他留在 Replit</li>
+<li>此時按下 Run -&gt; 根據 .replit 中的設定, 利用 python3 執行 main.py</li>
+<li>顯示出 Replit 內建的 Python3 環境並沒有執行 cmsimde 所需的模組</li>
+<li>pip install flask flask_cors bs4 lxml pelican markdown gevent</li>
+<li>所需模組安裝後, 就可以按下 Run 執行 main.py, 啟動後, 將網址複製到瀏覽器登入更改密碼</li>
+<li>git remote add origin<span> </span><a href="https://github.com/scrum-3/w15.git">https://github.com/scrum-3/w15.git</a></li>
+<li>將能夠維護 repo 權限的 token 放到 .git/config 與 origin 對應的 url</li>
+<li>建立一個忽略 venv, config/config 以及  __Pycache__ 等目錄及無用的檔案</li>
+<li>git push -u origin main<br/><br/></li>
+</ol>
+<p>.gitignore 內容:</p>
+<div>
+<div class="syntaxhighlighter js" id="highlighter_83339">
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody>
+<tr>
+<td class="gutter">
+<div class="line number1 index0 alt2">1</div>
+<div class="line number2 index1 alt1">2</div>
+<div class="line number3 index2 alt2">3</div>
+<div class="line number4 index3 alt1">4</div>
+<div class="line number5 index4 alt2">5</div>
+<div class="line number6 index5 alt1">6</div>
+</td>
+<td class="code">
+<div class="container">
+<div class="line number1 index0 alt2"><code class="js preprocessor"># Byte-compiled</code></div>
+<div class="line number2 index1 alt1"><code class="js plain">__pycache__/</code></div>
+<div class="line number3 index2 alt2"><code class="js preprocessor"># for Replit, do not use the embedded venv Python</code></div>
+<div class="line number4 index3 alt1"><code class="js plain">venv/</code></div>
+<div class="line number5 index4 alt2"><code class="js plain">config/config</code></div>
+<div class="line number6 index5 alt1"><code class="js plain">.DS_Store</code></div>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
