--- a/content/About.html
+++ b/content/About.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2-w8.html'>w2-w8</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a><li><a href='W13.html'>W13</a><li><a href='W15.html'>W15</a></li>
                       </ul>
                 </nav>
               </div>
